samples/_failures_safe/1761546983_67a626_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13bce724.c: In function ‘main’:
./samples/SAFE/__tmp_13bce724.c:172:5: error: expected declaration or statement at end of input
  172 |     while (running) {
      |     ^~~~~
./samples/SAFE/__tmp_13bce724.c:172:5: error: expected declaration or statement at end of input
